# fedco

./: .editorconfig  .gitignore  README.md
web-development/: .env.example  Makefile  README.md  makefile  package.json  pyproject.toml  turbo.json
web-development/apps/bot/: pyproject.toml
web-development/apps/web/: .gitignore  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  tsup.config.ts
web-development/apps/web/web/: __main__.py
web-development/apps/web/web/assets/styles/: style.css
web-development/apps/web/web/assets/ts/: index.ts
web-development/apps/web/web/templates/: index.j2  layout.j2  news.j2
web-development/apps/web/web/templates/components/: contact_card.j2  container.j2  drawer.j2  hero_card.j2  icon.j2  section.j2  typography.j2
web-development/apps/web/web/templates/layouts/: base.j2
web-development/apps/web/web/templates/macros/: contact_card.j2  container.j2  drawer.j2  hero_card.j2  hero_card_wrapper.j2  photos_section.j2
web-development/bot/: main.py
web-development/web/: .gitignore  Makefile  app.py  package.json  pyproject.toml  tailwind.config.js
web-development/web/static/src/: style.css
web-development/web/templates/: index.j2  layout.j2
web-development/web/templates/macros/: about_section.j2  contact_card.j2  drawer.j2  footer.j2  header.j2  hero.j2  hero_card.j2  icon.j2  modules_section.j2  news_section.j2  photos_section.j2  theme.j2
web-development/web/web/templates/: layout.j2  news.j2
web-development/web/web/templates/macros/: hero.j2  theme.j2
(+7 files in other folders)
