[tool.poetry]
name = "web-development"
version = "1.0.0"
description = "web development course"
authors = ["Timur <timurtokaev.toombez@gmail.com>"]
readme = "README.md"
packages = [{include = "web_development"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
bot = {path = "apps/bot/", develop = true}
web = {path = "apps/web/", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
